go-social-8 (#55)
* Started register user functionality

* Added DB transaction

* Added activate
